# snake-containment

./: Dockerfile  README.md  action.yml  entrypoint.sh  pyproject.toml  test_file.txt
.github/workflows/: test-action.yml
core/: __init__.py  scanner.py  secrets.py
src/snake-containment/: __init__.py
src/snake_containment/: cli.py  main.py
src/snake_containment/core/: __init__.py  comment.py  ip_address.py  scanner.py  secrets.py
