[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snake-containment"
version = "0.1.0"
description = "Security analysis tool for CI/CD pipelines"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",           # CLI interface
    "pydantic",        # Config and data validation
    "requests",        # API calls
    "pyyaml",          # Config files
    "gitpython",       # Git operations
    "bandit",          # Python security linting
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
]

[project.scripts]
snake-containment = "snake_containment.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"